Fix version mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -815,6 +815,11 @@ button {
   display: flex;
   justify-content: center;
   min-width: 300px;
+  padding-left: 1rem;  
+  padding-right: 1rem; 
+  box-sizing: border-box;
+  max-width: 90%;
+  height: auto;
 }
 
 .cta img {
